--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,4 +36,8 @@ dependencies {
     implementation 'com.google.firebase:firebase-auth:18.0.0'
     implementation 'com.google.firebase:firebase-core:17.0.0'
     //implementation 'com.google.android.gms:play-services-gcm:17.0.0'
+
+    //google sign in librari
+    implementation 'com.google.android.gms:play-services-auth:17.0.0'
+
 }
